--- a/mpv-desktop.conf
+++ b/mpv-desktop.conf
@@ -47,7 +47,7 @@ cache-secs=2                            # how many seconds of audio/video to pre
 #############
 
 osc                                     # activate the on screen control
-script-opts=osc-vidscale=yes,osc-layout=bottombar
+script-opts=osc-layout=bottombar        # osc theme
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
@@ -100,14 +100,14 @@ alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio track
 #     3.2383154841662362 4.2410628637960699 5.2427643768701817 ... 8.2453949139520427 ...
 # lanczossoft: ewa_lanczossharp:scale-param1=1.015
 
-vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:scale-down=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
+vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:dscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
 
 [hq]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:scale-down=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
+vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:dscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
 [mobile]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:scale-down=mitchell:dither-depth=auto:scaler-resizes-only:blend-subtitles:icc-profile-auto:sigmoid-upscaling
+vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither-depth=auto:scaler-resizes-only:blend-subtitles:icc-profile-auto:sigmoid-upscaling
 #hwdec=auto
 [default]
 
