--- a/mpv-mobile.conf
+++ b/mpv-mobile.conf
@@ -104,7 +104,7 @@ vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither
 
 [hq]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:dscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
+vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
 [mobile]
 profile-desc="Low energy VO settings"
 vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither-depth=auto:scaler-resizes-only:blend-subtitles:icc-profile-auto:sigmoid-upscaling
