add autodeint from mpv repo
with minor modifications (useful output to OSD)

--- a/input.conf
+++ b/input.conf
@@ -107,7 +107,8 @@ D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text 
 CTRL+d cycle video
 f      cycle fullscreen ; show_text "Scale: ${window-scale}"
 
-g      vf toggle "yadif=[field]"
+#g      vf toggle "yadif=[field]"
+g      script_binding autodeint
 G      vf toggle "lavfi=[hqdn3d=2.0]"
 h      vf toggle vapoursynth=~~/vs-scripts/f3kdb.vpy
 H      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.vpy:2:8
