--- a/mpv-desktop.conf
+++ b/mpv-desktop.conf
@@ -46,12 +46,12 @@ cache-secs=2                            # how many seconds of audio/video to pre
 # OSD / OSC #
 #############
 
-osc                                     # activate the on screen control
+osc=no                                  # activate the on screen control
 script-opts=osc-layout=bottombar        # osc theme
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
-osd-status-msg='${time-pos} / ${length}　(${percent-pos}%)${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
+osd-status-msg='${time-pos} / ${length}${?percent-pos:　(${percent-pos}%)}${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
 
 osd-font='Hiragino Maru Gothic Pro'
 osd-font-size=32
@@ -100,11 +100,11 @@ alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio track
 #     3.2383154841662362 4.2410628637960699 5.2427643768701817 ... 8.2453949139520427 ...
 # lanczossoft: ewa_lanczossharp:scale-param1=1.015
 
-vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
+vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossoft:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
 
 [hq]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossharp:cscale-param1=1.015:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
+vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossoft:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
 [mobile]
 profile-desc="Low energy VO settings"
 vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither-depth=auto:scaler-resizes-only:blend-subtitles:icc-profile-auto:sigmoid-upscaling
@@ -131,13 +131,13 @@ volume=50                               # default volume, percentage of softvol-
 [protocol.https]
 cache=10000                             # possible values: cache size in kB, 'no', or 'auto'
 cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
-no-cache-pause                          # if the player should pause when the cache runs low
+#no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:30.0) Gecko/20100101 Firefox/30.0'
 
 [protocol.http]
 cache=10000                             # possible values: cache size in kB, 'no', or 'auto'
 cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
-no-cache-pause                          # if the player should pause when the cache runs low
+#no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.9; rv:30.0) Gecko/20100101 Firefox/30.0'
 
 [extension.gif]
