input: add replacements for colormatrix options

--- a/input.conf
+++ b/input.conf
@@ -122,8 +122,12 @@ L      ab_loop
 k      af toggle "drc=1"
 K      af toggle "bs2b=profile=cmoy"
 
-'      cycle colormatrix
-SHARP  cycle colormatrix-input-range
+# colormatrix
+SHARP cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
+# colormatrix-input-range
+' cycle_values vf "format=colorlevels=limited" "format=colorlevels=full" "format=colorlevels=auto"
+# colormatrix-output-range
+CTRL+SHARP cycle_values vf "format=outputlevels=limited" "format=outputlevels=full" "format=outputlevels=auto"
 
 F      ignore
 A      ignore
