input: use new seek option syntax

--- a/input.conf
+++ b/input.conf
@@ -15,15 +15,15 @@ MOUSE_BTN6     ignore
 
 # arrow keys
 
-RIGHT       osd-msg-bar seek +5  relative keyframes
-LEFT        osd-msg-bar seek -5  relative keyframes
-SHIFT+RIGHT osd-msg-bar seek +1  relative exact
-SHIFT+LEFT  osd-msg-bar seek -1  relative exact
+RIGHT       osd-msg-bar seek +5  relative+keyframes
+LEFT        osd-msg-bar seek -5  relative+keyframes
+SHIFT+RIGHT osd-msg-bar seek +1  relative+exact
+SHIFT+LEFT  osd-msg-bar seek -1  relative+exact
 
-UP         osd-msg-bar seek +30  relative keyframes
-DOWN       osd-msg-bar seek -30  relative keyframes
-SHIFT+UP   osd-msg-bar seek +120 relative keyframes
-SHIFT+DOWN osd-msg-bar seek -120 relative keyframes
+UP         osd-msg-bar seek +30  relative+keyframes
+DOWN       osd-msg-bar seek -30  relative+keyframes
+SHIFT+UP   osd-msg-bar seek +120 relative+keyframes
+SHIFT+DOWN osd-msg-bar seek -120 relative+keyframes
 
 CTRL+RIGHT osd-msg-bar sub_seek +1
 CTRL+LEFT  osd-msg-bar sub_seek -1
@@ -31,8 +31,8 @@ CTRL+LEFT  osd-msg-bar sub_seek -1
 CTRL+UP    add cache-size +50000 ; show_text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 CTRL+DOWN  add cache-size -50000 ; show_text "Cache Size: ${cache-size}\n| Used: ${cache-used}\n| Free: ${cache-free}"
 
-PGUP  osd-msg-bar seek +600 relative keyframes
-PGDWN osd-msg-bar seek -600 relative keyframes
+PGUP  osd-msg-bar seek +600 relative+keyframes
+PGDWN osd-msg-bar seek -600 relative+keyframes
 
 
 
@@ -53,7 +53,7 @@ PGDWN osd-msg-bar seek -600 relative keyframes
 )      add balance -0.1 ; show_text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
 =      add balance +0.1 ; show_text "Audio Balance (pan): ${balance}"  #                                  right
 
-!      ignore
+!      cycle ontop
 "      ignore
 $      ignore
 %      ignore
