config: multiple changes

--- a/mpv-mobile.conf
+++ b/mpv-mobile.conf
@@ -5,6 +5,7 @@
 # General #
 ###########
 
+ontop                                   # stay ontop of all windows
 border=no                               # no window title bar
 msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
@@ -46,8 +47,8 @@ cache-secs=2                            # how many seconds of audio/video to pre
 # OSD / OSC #
 #############
 
-osc=no                                  # activate the on screen control
-script-opts=osc-layout=bottombar        # osc theme
+osc=yes                                 # activate the on screen control
+script-opts=osc-layout=slimbox          # osc theme
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
@@ -83,6 +84,7 @@ sub-text-shadow-offset=1
 sub-text-shadow-color="#33000000"
 sub-text-spacing=0.5
 
+
 #############
 # Languages #
 #############
@@ -98,13 +100,12 @@ alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio track
 # gamma = 1.961/x = output gamma => 1.961/0.9338 = 2.1 (mpv assumes 1.961 gamma internally) 
 # zeros for jinc() function: (scale-radius for ewa_lanczos)
 #     3.2383154841662362 4.2410628637960699 5.2427643768701817 ... 8.2453949139520427 ...
-# lanczossoft: ewa_lanczossharp:scale-param1=1.015
 
 vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither-depth=auto:scaler-resizes-only:blend-subtitles:icc-profile-auto:sigmoid-upscaling
 
 [hq]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossoft:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:gamma=0.9338:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo
+vo=opengl-hq:scale=ewa_lanczossharp:scale-antiring=0.8:cscale=ewa_lanczossoft:cscale-antiring=0.9:dscale=mitchell:tscale=mitchell:dither-depth=8:temporal-dither:scaler-resizes-only:sigmoid-upscaling:blend-subtitles:icc-profile-auto:icc-cache=~/Library/Caches/mpv-3dlut:3dlut-size=256x256x256:pbo:gamma=0.9338
 [mobile]
 profile-desc="Low energy VO settings"
 vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither-depth=auto:scaler-resizes-only:blend-subtitles:icc-profile-auto:sigmoid-upscaling
@@ -116,7 +117,7 @@ vo=opengl:scale=lanczos:scale-radius=2:scale-antiring=1.0:dscale=mitchell:dither
 # Audio #
 #########
 
-audio-pitch-correction=no               # automatically insert scaletempo when playing with higher speed 
+audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed 
 #af-add=scaletempo                      # don't alter pitch when scaling (speeding) audio
 #channels=2                             # two channels by default
 softvol=auto
