--- a/mpv-mobile.conf
+++ b/mpv-mobile.conf
@@ -61,6 +61,7 @@ osd-border-color='#99000000'            # ARGB format
 osd-bar-align-y=0                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
 osd-border-size=1                       # size for osd text and progress bar
 osd-bar-h=2                             # height of osd bar as a fractional percentage of your screen height
+osd-bar-w=60                            # width  " " "
 
 
 #############
