input: rearrange fitler keys

--- a/input.conf
+++ b/input.conf
@@ -65,7 +65,7 @@ $      ignore
 
 
 # [q] [w] [e] [r] [t] z u [i] [o] [p]
-# [Q] [W] [E] [R] [T] Z U [I] [O]  P
+# [Q] [W] [E] [R] [T] Z U  I  [O]  P
 
 q      quit
 Q      quit_watch_later
@@ -82,7 +82,6 @@ R      set ab-loop-a no
 T      set ab-loop-b no
 
 i      script_binding stats
-I      vf toggle "eq=1:-1"
 o      cycle framedrop
 O      osd
 p      show_progress
@@ -91,46 +90,43 @@ z      ignore
 u      ignore
 Z      ignore
 U      ignore
+I      ignore
 P      ignore
 
 
 
 # [a] [s] [d] [f] [g] [h] [j] [k] [l] [#]
-#  A  [S] [D]  F  [G] [H] [J] [K] [L] [']
+#  A  [S] [D] [F] [G] [H] [J] [K] [L] [']
 
 a      cycle audio                          # switch audio streams
+A      af toggle "drc=1"                    # dynamic range compression
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
-CTRL+s cycle ass-vsfilter-aspect-compat
 d      cycle_values window-scale "1.5" "2.0" "0.5" "1.0" ; show_text "Scale: ${window-scale}"
 D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1 (CinemaScope)}"
 CTRL+d cycle video
 f      cycle fullscreen ; show_text "Scale: ${window-scale}"
+F      vf clr ""                            # clear all filters
 
-#g      vf toggle "yadif=[field]"
-g      script_binding autodeint
-G      vf toggle "lavfi=[hqdn3d=2.0]"
-h      vf toggle vapoursynth=~~/vs-scripts/f3kdb.vpy
-H      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.vpy:2:8
-Ctrl+h vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.vpy:2:8
-#Ctrl+h vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/nnedi3.vpy:2:8
-j      cycle_values hue 100 0 ; vf toggle "eq=1:-1"     # invert chroma ; invert luma
-J      vf toggle "lavfi=[unsharp]"
+g      vf toggle vapoursynth=~~/vs-scripts/f3kdb.vpy
+G      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.vpy:2:8
+Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.vpy:2:8
+h      script_binding autodeint
+H      vf toggle "yadif=[field]"
+j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
+J      vf toggle "lavfi=[unsharp]"          # sharpen
+k      vf toggle "eq=1:-1" ; show_text "Invert luma"
+K      cycle_values hue 100 0 ; show_text "Invert chroma"
+
 l      cycle_values loop-file yes no ; show_text "${?=loop-file==yes:Looping enabled}${?=loop-file==no:Looping disabled}"
 L      ab_loop
 
-k      af toggle "drc=1"
-K      af toggle "bs2b=profile=cmoy"
-
-# colormatrix
+# cycle colormatrix
 SHARP cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
-# colormatrix-input-range
+# cycle colormatrix-input-range
 ' cycle_values vf "format=colorlevels=limited" "format=colorlevels=full" "format=colorlevels=auto"
-# colormatrix-output-range
+# cycle colormatrix-output-range
 CTRL+SHARP cycle_values vf "format=outputlevels=limited" "format=outputlevels=full" "format=outputlevels=auto"
-
-F      ignore
-A      ignore
 
 
 
