--- a/input.conf
+++ b/input.conf
@@ -108,11 +108,11 @@ CTRL+d cycle video
 f      cycle fullscreen ; show_text "Scale: ${window-scale}"
 F      vf clr ""                            # clear all filters
 
-g      vf toggle vapoursynth=~~/vs-scripts/f3kdb.vpy
-G      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.vpy:2:8
+g      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.vpy:2:8
+G      vf toggle vapoursynth=~~/vs-scripts/f3kdb.vpy
 Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.vpy:2:8
-h      script_binding autodeint
-H      vf toggle "yadif=[field]"
+h      vf toggle "yadif=[field]"
+H      script_binding autodeint
 j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 J      vf toggle "lavfi=[unsharp]"          # sharpen
 k      vf toggle "eq=1:-1" ; show_text "Invert luma"
