--- a/encoding-profiles.conf
+++ b/encoding-profiles.conf
@@ -66,9 +66,15 @@ ovc = h263
 ovcopts = qscale=4
 
 [enc-v-h264]
-profile-desc = "H.264 (x264)"
+profile-desc = "H.264 (x264) (crf=23)"
 ovc = libx264
 ovcopts = preset=medium,crf=23,threads=0
+vf-add = noformat=444p,noformat=444p9,noformat=444p10,noformat=422p,noformat=422p9,noformat=422p10
+
+[enc-v-h264-hq]
+profile-desc = "H.264 (x264) (crf=18)"
+ovc = libx264
+ovcopts = preset=slow,crf=18,threads=0
 vf-add = noformat=444p,noformat=444p9,noformat=444p10,noformat=422p,noformat=422p9,noformat=422p10
 
 [enc-v-mpeg2]
@@ -144,6 +150,14 @@ profile-desc = "H.264 + AAC (for MP4)"
 of = mp4
 ocopyts = yes
 profile = enc-v-h264
+profile = enc-a-aac
+ofopts-clr = yes
+
+[enc-f-mp4-hq]
+profile-desc = "H.264 + AAC (for MP4) HQ"
+of = mp4
+ocopyts = yes
+profile = enc-v-h264-hq
 profile = enc-a-aac
 ofopts-clr = yes
 
