--- a/input.conf
+++ b/input.conf
@@ -37,7 +37,7 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 
 
 # [1] [2] [3] [4] [5] [6] [7] [8] [9] [0] 
-#  !   "   §   $   %   &   /   (  [)] [=] ?
+# [!] ["] [§] [$]  %   &   /   (  [)] [=] ?
 
 1      add contrast -1 ; show_text "Contrast: ${contrast}"
 2      add contrast +1 ; show_text "Contrast: ${contrast}"
@@ -54,8 +54,13 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 =      add balance +0.1 ; show_text "Audio Balance (pan): ${balance}"  #                                  right
 
 !      cycle ontop
-"      ignore
-$      ignore
+# cycle colormatrix-input-range
+"      cycle_values vf "format=colorlevels=full" "format=colorlevels=auto" "format=colorlevels=limited"
+# cycle colormatrix-output-range
+§      cycle_values vf "format=outputlevels=full" "format=outputlevels=auto" "format=outputlevels=limited"
+# cycle colormatrix
+$      cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
+
 %      ignore
 &      ignore
 /      ignore
@@ -96,14 +101,14 @@ P      ignore
 
 
 # [a] [s] [d] [f] [g] [h] [j] [k] [l] [#]
-#  A  [S] [D] [F] [G] [H] [J] [K] [L] [']
+# [A] [S] [D] [F] [G] [H] [J] [K] [L] [']
 
 a      cycle audio                          # switch audio streams
 A      af toggle "drc=1"                    # dynamic range compression
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
 d      cycle_values window-scale "1.5" "2.0" "0.5" "1.0" ; show_text "Scale: ${window-scale}"
-D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1 (CinemaScope)}"
+D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1}"
 CTRL+d cycle video
 f      cycle fullscreen ; show_text "Scale: ${window-scale}"
 F      vf clr ""                            # clear all filters
@@ -121,12 +126,7 @@ K      cycle_values hue 100 0 ; show_text "Invert chroma"
 l      cycle_values loop-file yes no ; show_text "${?=loop-file==yes:Looping enabled}${?=loop-file==no:Looping disabled}"
 L      ab_loop
 
-# cycle colormatrix
-SHARP cycle_values vf "format=colormatrix=auto" "format=colormatrix=bt.601" "format=colormatrix=bt.709" "format=colormatrix=bt.2020-ncl" "format=colormatrix=bt.2020-cl" "format=colormatrix=smpte-240m"
-# cycle colormatrix-input-range
-' cycle_values vf "format=colorlevels=limited" "format=colorlevels=full" "format=colorlevels=auto"
-# cycle colormatrix-output-range
-CTRL+SHARP cycle_values vf "format=outputlevels=limited" "format=outputlevels=full" "format=outputlevels=auto"
+SHARP vf toggle "format=colorlevels=full"
 
 
 
@@ -163,10 +163,10 @@ B      ignore
 # [<] [>] [+] [-] [esc] [space] [BackSpace]
 #         [*] [_] [tab] [enter]
 
->       osd-msg-bar add chapter -1
-<       osd-msg-bar add chapter +1
-CTRL+>  osd-msg playlist_prev
-CTRL+<  osd-msg playlist_next
+>      osd-msg-bar add chapter -1
+<      osd-msg-bar add chapter +1
+CTRL+> osd-msg playlist_prev
+CTRL+< osd-msg playlist_next
 
 -      add sub-scale -0.1                   # decrease subtitle font size
 +      add sub-scale +0.1                   # increase subtitle font size
@@ -179,6 +179,23 @@ TAB    cycle mute
 ENTER  show_progress
 
 BS     set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show_text "Gamma/Brightness/Contrast/Saturation/Hue resetted"
+
+
+
+# Numpad
+
+KP0      ignore
+KP1      add video-zoom  -0.05
+KP2      add video-pan-y -0.01
+KP3      add video-zoom   0.05
+KP4      add video-pan-x  0.01
+KP5      ignore
+KP6      add video-pan-x -0.01
+KP7      add video-zoom  -0.05
+KP8      add video-pan-y  0.01
+KP9      add video-zoom   0.05
+KP_DEC   ignore
+KP_ENTER ignore
 
 
 
