input: rotate video
w-why not...

--- a/input.conf
+++ b/input.conf
@@ -177,6 +177,7 @@ ESC    cycle fullscreen 0
 SPACE  cycle pause
 TAB    cycle mute
 ENTER  show_progress
+SHIFT+ENTER cycle_values video-rotate 90 180 270 0
 
 BS     set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show_text "Gamma/Brightness/Contrast/Saturation/Hue resetted"
 
