input: add key to push subs in black margins

--- a/input.conf
+++ b/input.conf
@@ -107,6 +107,7 @@ a      cycle audio                          # switch audio streams
 A      af toggle "drc=1"                    # dynamic range compression
 s      cycle sub                            # cycle through subtitles
 S      cycle sub-visibility
+CTRL+s cycle_values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
 d      cycle_values window-scale "1.5" "2.0" "0.5" "1.0" ; show_text "Scale: ${window-scale}"
 D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1}"
 CTRL+d cycle video
