config: reflect latest mpv changes

--- a/mpv.conf
+++ b/mpv.conf
@@ -50,7 +50,7 @@ osc=yes                                 # activate the on screen control
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
-osd-status-msg='${time-pos} / ${length}${?percent-pos:　(${percent-pos}%)}${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
+osd-status-msg='${time-pos} / ${duration}${?percent-pos:　(${percent-pos}%)}${?vo-drop-frame-count:${!vo-drop-frame-count==0:　Dropped: ${vo-drop-frame-count}}}\n${?chapter:Chapter: ${chapter}}'
 
 osd-font='Hiragino Maru Gothic Pro'
 osd-font-size=32
@@ -123,11 +123,9 @@ profile=high-quality
 #########
 
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed 
-#af-add=scaletempo                      # don't alter pitch when scaling (speeding) audio
-#channels=2                             # two channels by default
-softvol=auto
+softvol=yes
 softvol-max=200                         # maximum volume in %, everything above 100 results in amplification
-volume=50                               # default volume, percentage of softvol-max
+volume=100                              # default volume, 100 = unchanged
 
 
 ###################################
