config: add debanding shader

--- a/mpv.conf
+++ b/mpv.conf
@@ -103,11 +103,11 @@ alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio track
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338:fancy-downscaling:temporal-dither:pbo:3dlut-size=256x256x256:icc-cache-dir=~~/icc-cache
+vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338:fancy-downscaling:temporal-dither:pbo:3dlut-size=256x256x256:icc-cache-dir=~~/icc-cache:source-shader=~~/shaders/deband.glsl
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338:fancy-downscaling
+vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338:fancy-downscaling:source-shader=~~/shaders/deband.glsl
 
 [low-quality]
 profile-desc="Low energy VO settings"
@@ -124,8 +124,8 @@ profile=high-quality
 
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed 
 softvol=yes
-softvol-max=200                         # maximum volume in %, everything above 100 results in amplification
-volume=100                              # default volume, 100 = unchanged
+softvol-max=150                         # maximum volume in %, everything above 100 results in amplification
+volume=75                               # default volume, 100 = unchanged
 
 
 ###################################
