input: add "reset zoom/pan" binding

--- a/input.conf
+++ b/input.conf
@@ -191,7 +191,7 @@ KP1      add video-zoom  -0.05
 KP2      add video-pan-y -0.01
 KP3      add video-zoom   0.05
 KP4      add video-pan-x  0.01
-KP5      ignore
+KP5      set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show_text "Reset zoom/pan"
 KP6      add video-pan-x -0.01
 KP7      add video-zoom  -0.05
 KP8      add video-pan-y  0.01
