various small config and cosmetic changes

--- a/mpv.conf
+++ b/mpv.conf
@@ -125,7 +125,7 @@ profile=high-quality
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
 softvol=yes
 softvol-max=150                         # maximum volume in %, everything above 100 results in amplification
-volume=75                               # default volume, 100 = unchanged
+volume=90                               # default volume, 100 = unchanged
 
 
 ###################################
@@ -134,13 +134,13 @@ volume=75                               # default volume, 100 = unchanged
 
 [protocol.https]
 cache=200000                            # possible values: cache size in kB, 'no', or 'auto'
-cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
+cache-secs=2                            # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
 [protocol.http]
 cache=200000                            # possible values: cache size in kB, 'no', or 'auto'
-cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
+cache-secs=2                            # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
