config: increase cache and update VO lines
These aren't actually used with auto-options.lua and weren't updated
when changes to auto-options were made recently.

--- a/mpv.conf
+++ b/mpv.conf
@@ -37,7 +37,7 @@ demuxer-thread=yes
 # Cache #
 #########
 
-cache=30000                             # possible values: cache size in kB, 'no', or 'auto'
+cache=50000                             # possible values: cache size in kB, 'no', or 'auto'
 cache-initial=0                         # start playback when your cache is filled up with x kB
 cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
 
@@ -103,17 +103,15 @@ alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio track
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338:fancy-downscaling:temporal-dither:pbo:3dlut-size=256x256x256:icc-cache-dir=~~/icc-cache:source-shader=~~/shaders/deband.glsl
+vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl:icc-cache-dir=~~/icc-cache:3dlut-size=256x256x256:temporal-dither
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338:fancy-downscaling:source-shader=~~/shaders/deband.glsl
+vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl
 
 [low-quality]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=lanczos:dscale=mitchell:tscale=oversample:scale-radius=2:dither-depth=auto:scaler-resizes-only:sigmoid-upscaling:target-prim=bt.709:gamma=0.9338
-hwdec=auto
-[default]
+vo=opengl:scale=lanczos:dscale=mitchell:tscale=robidouxsharp:scale-radius=2:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
 
 profile=high-quality
 
@@ -133,14 +131,14 @@ volume=90                               # default volume, 100 = unchanged
 ###################################
 
 [protocol.https]
-cache=200000                            # possible values: cache size in kB, 'no', or 'auto'
-cache-secs=2                            # how many seconds of audio/video to prefetch
+cache=100000                            # possible values: cache size in kB, 'no', or 'auto'
+cache-secs=20                           # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
 [protocol.http]
-cache=200000                            # possible values: cache size in kB, 'no', or 'auto'
-cache-secs=2                            # how many seconds of audio/video to prefetch
+cache=100000                            # possible values: cache size in kB, 'no', or 'auto'
+cache-secs=20                           # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
