--- a/mpv.conf
+++ b/mpv.conf
@@ -92,6 +92,16 @@ slang=enm,en,eng,de,deu,ger             # automatically select these subtitles (
 alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio tracks (decreasing priority)
 
 
+#########
+# Audio #
+#########
+
+audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
+softvol=yes
+softvol-max=150                         # maximum volume in %, everything above 100 results in amplification
+volume=90                               # default volume, 100 = unchanged
+
+
 ################
 # Video Output #
 ################
@@ -114,16 +124,7 @@ profile-desc="Low energy VO settings"
 vo=opengl:scale=lanczos:dscale=mitchell:tscale=robidouxsharp:scale-radius=2:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
 
 profile=high-quality
-
-
-#########
-# Audio #
-#########
-
-audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
-softvol=yes
-softvol-max=150                         # maximum volume in %, everything above 100 results in amplification
-volume=90                               # default volume, 100 = unchanged
+[default]
 
 
 ###################################
