--- a/input.conf
+++ b/input.conf
@@ -117,7 +117,7 @@ F      vf clr ""                            # clear all filters
 g      vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation.py:2
 G      vf toggle vapoursynth=~~/vs-scripts/f3kdb.py
 Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.py:2
-h      vf toggle "yadif=[field]"
+h      cycle deinterlace
 H      script_binding autodeint
 j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 J      vf toggle "lavfi=[unsharp]"          # sharpen
