--- a/input.conf
+++ b/input.conf
@@ -119,6 +119,7 @@ G      vf toggle vapoursynth=~~/vs-scripts/f3kdb.py
 Ctrl+g vf toggle format=yuv420p,vapoursynth=~~/vs-scripts/motion-interpolation-brokenfps.py:2
 h      cycle deinterlace
 H      script_binding autodeint
+Ctrl+h vf toggle vapoursynth=~~/vs-scripts/decimate.py
 j      vf toggle "lavfi=[hqdn3d=2.0]"       # denoise
 J      vf toggle "lavfi=[unsharp]"          # sharpen
 k      vf toggle "eq=1:-1" ; show_text "Invert luma"
