flowfps actually works for content below 1080p

--- a/mpv.conf
+++ b/mpv.conf
@@ -5,7 +5,7 @@
 # General #
 ###########
 
-border=no                               # no window title bar
+no-border                               # no window title bar
 msg-module                              # prepend module name to log messages
 msg-color                               # color log messages on terminal
 term-osd-bar                            # display a progress bar on the terminal
@@ -13,31 +13,30 @@ use-filedir-conf                        # look for additional config files in th
 pause                                   # no autoplay
 keep-open                               # keep the player open when a file's end is reached
 framedrop=vo                            # drop frames in case your computer is to slow for realtime playback
-force-window=no                         # don't force the immediate creation of a window
 autofit-larger=100%x95%                 # resize window in case it's larger than W%xH% of the screen
 deinterlace=auto                        # 'auto' does not imply interlacing-detection
-hls-bitrate=max                         # use max quality for HLS streams
-ytdl-format=bestvideo[height>720][height<2160]+bestaudio/best[height>480]/bestvideo[height=480]+bestaudio/best
-
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
-#fs-black-out-screens
 input-media-keys=yes                    # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
+demuxer-thread=yes
+#fs-black-out-screens
 
 screenshot-format=png
 screenshot-png-compression=8
 screenshot-png-filter=5
 screenshot-template='~/Desktop/%F (%P) %n'
 
-demuxer-thread=yes
-#demuxer-readahead-packets=500
+hls-bitrate=max                         # use max quality for HLS streams
+ytdl-format=bestvideo[height>720][height<2160]+bestaudio/best[height>480]/bestvideo[height=480]+bestaudio/best
 
 
 #########
 # Cache #
 #########
 
-cache=50000                             # possible values: cache size in kB, 'no', or 'auto'
+cache=yes
+cache-default=50000                     # size in KB
+cache-backbuffer=25000                  # size in KB
 cache-initial=0                         # start playback when your cache is filled up with x kB
 cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
 
@@ -46,7 +45,7 @@ cache-secs=2                            # how many seconds of audio/video to pre
 # OSD / OSC #
 #############
 
-osc=yes                                 # activate the on screen control
+osc                                     # activate the on screen control
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
@@ -132,21 +131,27 @@ profile=high-quality
 ###################################
 
 [protocol.https]
-cache=100000                            # possible values: cache size in kB, 'no', or 'auto'
+cache=yes
+cache-default=500000                    # size in KB
+cache-backbuffer=250000                 # size in KB
 cache-secs=20                           # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
 [protocol.http]
-cache=100000                            # possible values: cache size in kB, 'no', or 'auto'
+cache=yes
+cache-default=500000                    # size in KB
+cache-backbuffer=250000                 # size in KB
 cache-secs=20                           # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
 [extension.gif]
+cache=no
 no-pause
 loop-file=yes
 
 [extension.webm]
+cache=no
 no-pause
 loop-file=yes
