config: update VO lines
and various other things

--- a/mpv.conf
+++ b/mpv.conf
@@ -23,7 +23,6 @@ demuxer-thread=yes
 
 screenshot-format=png
 screenshot-png-compression=8
-screenshot-png-filter=5
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
@@ -59,20 +58,21 @@ osd-border-color='#99000000'            # ARGB format
 osd-bar-align-y=0                       # progress bar y alignment (-1 top, 0 centered, 1 bottom)
 osd-border-size=1                       # size for osd text and progress bar
 osd-bar-h=2                             # height of osd bar as a fractional percentage of your screen height
-osd-bar-w=60                            # width  " " "
+osd-bar-w=60                            # width of " " "
 
 
 #############
 # Subtitles #
 #############
 
-demuxer-mkv-subtitle-preroll
-sub-auto=fuzzy                          # external subs don't need to match the file name exactly
+demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
+sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
 sub-ass                                 # render ASS subs
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
 
+# the following options only apply to subtitles without own styling (i.e. not ASS but e.g. SRT)
 sub-text-font="Source Sans Pro Semibold"
 sub-text-font-size=52
 sub-text-color="#FFFFFFFF"
@@ -105,25 +105,26 @@ volume=90                               # default volume, 100 = unchanged
 # Video Output #
 ################
 
-# - gamma = 1.961/x = output gamma => 1.961/0.9338 = 2.1 (mpv assumes 1.961 gamma internally)
+# - gamma: 1.961/x = output gamma => 1.961/0.9338 = 2.1 (mpv assumes 1.961 gamma internally)
 # - zeros for jinc() function: (scale-radius for ewa_lanczos)
 #     3.2383154841662362 4.2410628637960699 5.2427643768701817 ... 8.2453949139520427 ...
-# - target-prim=bt.709 // icc-profile-auto
+# - target-prim=bt.709 || icc-profile-auto
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl:icc-cache-dir=~~/icc-cache:3dlut-size=256x256x256:temporal-dither
+vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl:icc-cache-dir=~~/icc-cache:3dlut-size=256x256x256:temporal-dither
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl
+vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl
 
 [low-quality]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=lanczos:dscale=mitchell:tscale=robidouxsharp:scale-radius=2:dither-depth=auto:gamma=0.9338:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
+vo=opengl:scale=lanczos:dscale=mitchell:tscale=robidouxsharp:scale-radius=2:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
+hwdec=auto
 
-profile=high-quality
 [default]
+profile=high-quality
 
 
 ###################################
