--- a/mpv.conf
+++ b/mpv.conf
@@ -18,7 +18,6 @@ deinterlace=auto                        # 'auto' does not imply interlacing-dete
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=yes                    # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
-demuxer-thread=yes
 #fs-black-out-screens
 
 screenshot-format=png
@@ -44,7 +43,7 @@ cache-secs=2                            # how many seconds of audio/video to pre
 # OSD / OSC #
 #############
 
-osc                                     # activate the on screen control
+no-osc                                  # deactivate on screen controls
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
