--- a/input.conf
+++ b/input.conf
@@ -47,8 +47,8 @@ PGDWN osd-msg-bar seek -600 relative+keyframes
 6      add gamma +1 ; show_text "Gamma: ${gamma}"
 7      add saturation -1 ; show_text "Saturation: ${saturation}"
 8      add saturation +1 ; show_text "Saturation: ${saturation}"
-9      add volume -1 ; show_text "Volume: ${volume}"
-0      add volume +1 ; show_text "Volume: ${volume}"
+9      add volume -2 ; show_text "Volume: ${volume}"
+0      add volume +2 ; show_text "Volume: ${volume}"
 
 )      add balance -0.1 ; show_text "Audio Balance (pan): ${balance}"  # adjust audio balance in favor of left
 =      add balance +0.1 ; show_text "Audio Balance (pan): ${balance}"  #                                  right
@@ -128,7 +128,7 @@ K      cycle_values hue 100 0 ; show_text "Invert chroma"
 l      cycle_values loop-file yes no ; show_text "${?=loop-file==yes:Looping enabled}${?=loop-file==no:Looping disabled}"
 L      ab_loop
 
-SHARP vf toggle "format=colorlevels=full"
+SHARP  vf toggle "format=colorlevels=full"
 
 
 
@@ -173,7 +173,7 @@ CTRL+< osd-msg playlist_next
 -      add sub-scale -0.1                   # decrease subtitle font size
 +      add sub-scale +0.1                   # increase subtitle font size
 *      add sub-pos -1                       # move subtitles up
-_      add sub-pos +1                       #                down
+_      add sub-pos +1                       # move subtitles down
 
 ESC    cycle fullscreen 0
 SPACE  cycle pause
