--- a/mpv.conf
+++ b/mpv.conf
@@ -43,7 +43,7 @@ cache-secs=2                            # how many seconds of audio/video to pre
 # OSD / OSC #
 #############
 
-no-osc                                  # deactivate on screen controls
+osc                                     # activate on screen controls
 
 osd-level=1                             # enable osd and display --osd-status-msg on interaction
 osd-duration=2500                       # hide the osd after x ms
@@ -67,7 +67,6 @@ osd-bar-w=60                            # width of " " "
 demuxer-mkv-subtitle-preroll            # try to correctly show embedded subs when seeking
 sub-auto=fuzzy                          # external subs don't have to match the file name exactly to autoload
 sub-paths=ass:srt:sub:subs:subtitles    # search for external subs in the listed subdirectories
-sub-ass                                 # render ASS subs
 embeddedfonts=yes                       # use embedded fonts for SSA/ASS subs
 ass-force-style=Kerning=yes             # allows you to override style parameters of ASS scripts
 
@@ -101,8 +100,12 @@ volume=90                               # default volume, 100 = unchanged
 
 
 ################
-# Video Output #
+# Video Output # active VOs (and some other options) are set externally by a script
 ################
+
+# use this to detect auto-options malfunctions
+vo=opengl:dither-depth=1
+
 
 # - gamma: 1.961/x = output gamma => 1.961/0.9338 = 2.1 (mpv assumes 1.961 gamma internally)
 # - zeros for jinc() function: (scale-radius for ewa_lanczos)
@@ -119,11 +122,10 @@ vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=robidouxsharp
 
 [low-quality]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=lanczos:dscale=mitchell:tscale=robidouxsharp:scale-radius=2:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
+vo=opengl:scale=spline36:dscale=mitchell:tscale=robidouxsharp:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
 hwdec=auto
 
 [default]
-profile=high-quality
 
 
 ###################################
@@ -152,6 +154,6 @@ no-pause
 loop-file=yes
 
 [extension.webm]
-cache=no
-no-pause
-loop-file=yes
+#cache=no
+#no-pause
+#loop-file=yes
