config: use the now internal debanding

--- a/mpv.conf
+++ b/mpv.conf
@@ -114,15 +114,15 @@ vo=opengl:dither-depth=1
 
 [high-quality]
 profile-desc="High quality VO settings"
-vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl:icc-cache-dir=~~/icc-cache:3dlut-size=256x256x256:temporal-dither
+vo=opengl-hq:scale=ewa_lanczossharp:cscale=ewa_lanczossoft:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=no:fancy-downscaling=yes:deband=yes:deband-iterations=4:deband-grain=32
 
 [mid-quality]
 profile-desc="Medium quality VO settings"
-vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=robidouxsharp:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling:interpolation:fancy-downscaling:source-shader=~~/shaders/deband.glsl
+vo=opengl-hq:scale=spline36:cscale=spline36:dscale=mitchell:tscale=oversample:scale-antiring=0.8:cscale-antiring=0.9:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=yes:fancy-downscaling=yes:deband=yes:deband-iterations=2:deband-grain=32
 
 [low-quality]
 profile-desc="Low energy VO settings"
-vo=opengl:scale=spline36:dscale=mitchell:tscale=robidouxsharp:dither-depth=auto:target-prim=bt.709:scaler-resizes-only:sigmoid-upscaling
+vo=opengl:scale=spline36:dscale=mitchell:tscale=oversample:dither-depth=auto:target-prim=bt.709:scaler-resizes-only=yes:sigmoid-upscaling=yes:blend-subtitles=yes
 hwdec=auto
 
 [default]
@@ -136,7 +136,7 @@ hwdec=auto
 cache=yes
 cache-default=500000                    # size in KB
 cache-backbuffer=250000                 # size in KB
-cache-secs=20                           # how many seconds of audio/video to prefetch
+cache-secs=60                           # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
@@ -144,7 +144,7 @@ user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/2010010
 cache=yes
 cache-default=500000                    # size in KB
 cache-backbuffer=250000                 # size in KB
-cache-secs=20                           # how many seconds of audio/video to prefetch
+cache-secs=60                           # how many seconds of audio/video to prefetch
 #no-cache-pause                         # if the player should pause when the cache runs low
 user-agent='Mozilla/5.0 (Macintosh; Intel Mac OS X 10.10; rv:37.0) Gecko/20100101 Firefox/37.0'
 
