--- a/mpv.conf
+++ b/mpv.conf
@@ -93,6 +93,7 @@ alang=jp,jpn,en,eng,de,deu,ger          # automatically select these audio track
 # Audio #
 #########
 
+audio-file-auto=fuzzy                   # external audio doesn't has to match the file name exactly to autoload
 audio-pitch-correction=yes              # automatically insert scaletempo when playing with higher speed
 softvol=yes
 softvol-max=150                         # maximum volume in %, everything above 100 results in amplification
