input: add secondary sub binding
And move the margin trigger binding to some different key combination. I
can't recall using it anyway.

--- a/input.conf
+++ b/input.conf
@@ -106,8 +106,9 @@ P      ignore
 a      cycle audio                          # switch audio streams
 A      af toggle "drc=1"                    # dynamic range compression
 s      cycle sub                            # cycle through subtitles
-S      cycle sub-visibility
-CTRL+s cycle_values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
+S      cycle secondary-sid
+CTRL+s cycle sub-visibility
+ALT+s  cycle_values ass-force-margins "yes" "no"  # does not work with :blend-subtitles
 d      cycle_values window-scale "1.5" "2.0" "0.5" "1.0" ; show_text "Scale: ${window-scale}"
 D      cycle_values video-aspect "4:3" "16:9" "16:10" "2.35:1" "-1" ; show_text "Aspect Ratio: ${?video-aspect==1.500:3:2}${?video-aspect==1.333:4:3}${?video-aspect==1.778:16:9}${?video-aspect==1.600:16:10}${?video-aspect==2.350:2.35:1}"
 CTRL+d cycle video
@@ -129,7 +130,7 @@ l      cycle_values loop-file yes no ; show_text "${?=loop-file==yes:Looping ena
 L      ab_loop
 
 SHARP  vf toggle "format=colorlevels=full"
-
+'      cycle_values video-rotate 90 180 270 0
 
 
 # [y] [x] [c] [v] [b] [n] [m] [,] [.]
@@ -170,16 +171,17 @@ B      ignore
 CTRL+> osd-msg playlist_prev
 CTRL+< osd-msg playlist_next
 
--      add sub-scale -0.1                   # decrease subtitle font size
-+      add sub-scale +0.1                   # increase subtitle font size
+-      add sub-scale -0.05                  # decrease subtitle font size
++      add sub-scale +0.05                  # increase subtitle font size
 *      add sub-pos -1                       # move subtitles up
 _      add sub-pos +1                       # move subtitles down
 
-ESC    cycle fullscreen 0
-SPACE  cycle pause
-TAB    cycle mute
-ENTER  show_progress
-SHIFT+ENTER cycle_values video-rotate 90 180 270 0
+ESC               cycle fullscreen 0
+SPACE             cycle pause
+IDEOGRAPHIC_SPACE cycle pause
+TAB               cycle mute
+ENTER             show_progress
+SHIFT+ENTER       cycle_values video-rotate 90 180 270 0
 
 BS     set gamma 0 ; set brightness 0 ; set contrast 0 ; set saturation 0 ; set hue 0 ; show_text "Gamma/Brightness/Contrast/Saturation/Hue resetted"
 
