config: remove restriction of ytdl formats
No longer needed since ffmpeg behaves better with DASH

--- a/mpv.conf
+++ b/mpv.conf
@@ -18,14 +18,13 @@ deinterlace=auto                        # 'auto' does not imply interlacing-dete
 cursor-autohide-fs-only                 # don't autohide the cursor in window mode, only fullscreen
 input-media-keys=yes                    # enable/disable OSX media keys
 cursor-autohide=1000                    # autohide the curser after 1s
-#fs-black-out-screens
+fs-black-out-screens
 
 screenshot-format=png
 screenshot-png-compression=8
 screenshot-template='~/Desktop/%F (%P) %n'
 
 hls-bitrate=max                         # use max quality for HLS streams
-ytdl-format=bestvideo[height>720][height<2160]+bestaudio/best[height>480]/bestvideo[height=480]+bestaudio/best
 
 
 #########
@@ -36,7 +35,7 @@ cache=yes
 cache-default=50000                     # size in KB
 cache-backbuffer=25000                  # size in KB
 cache-initial=0                         # start playback when your cache is filled up with x kB
-cache-secs=2                            # how many seconds of audio/video to prefetch if the cache is active
+cache-secs=10                           # how many seconds of audio/video to prefetch if the cache is active
 
 
 #############
