input: add zoom keys for use without numpad

--- a/input.conf
+++ b/input.conf
@@ -202,6 +202,17 @@ KP9      add video-zoom   0.05
 KP_DEC   ignore
 KP_ENTER ignore
 
+CTRL+0   ignore
+CTRL+1   add video-zoom  -0.05
+CTRL+2   add video-pan-y -0.01
+CTRL+3   add video-zoom   0.05
+CTRL+4   add video-pan-x  0.01
+CTRL+5   set video-zoom 0 ; set video-pan-x 0 ; set video-pan-y 0 ; show_text "Reset zoom/pan"
+CTRL+6   add video-pan-x -0.01
+CTRL+7   add video-zoom  -0.05
+CTRL+8   add video-pan-y  0.01
+CTRL+9   add video-zoom   0.05
+
 
 
 # Apple Remote section
